# ernst

./: .gitignore  LICENSE  Paths_ernst.hs  README  ernst.cabal  ernst.glade  ernst.hs  lattice.glade  lattice.hs  makefile
